parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> global_declaration_list
Rule 2     global_declaration_list -> global_declaration
Rule 3     global_declaration_list -> global_declaration_list global_declaration
Rule 4     declarator -> pointer direct_declarator
Rule 5     declarator -> direct_declarator
Rule 6     declaration -> decl_body SEMI
Rule 7     global_declaration -> function_definition
Rule 8     global_declaration -> declaration
Rule 9     declaration_list -> declaration
Rule 10    declaration_list -> declaration_list declaration
Rule 11    declaration_list_opt -> declaration_list
Rule 12    declaration_list_opt -> empty
Rule 13    block_item_list_opt -> block_item_list
Rule 14    block_item_list_opt -> empty
Rule 15    decl_body -> type_specifier init_declarator_list_opt
Rule 16    init_declarator -> declarator
Rule 17    init_declarator -> declarator EQUALS initializer
Rule 18    init_declarator_list_opt -> init_declarator_list
Rule 19    init_declarator_list_opt -> empty
Rule 20    init_declarator_list -> init_declarator
Rule 21    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 22    block_item_list -> block_item
Rule 23    block_item_list -> block_item_list block_item
Rule 24    block_item -> statement
Rule 25    block_item -> declaration
Rule 26    function_definition -> type_specifier declarator declaration_list_opt compound_statement
Rule 27    function_definition -> declarator declaration_list_opt compound_statement
Rule 28    direct_declarator -> identifier
Rule 29    direct_declarator -> LPAREN declarator RPAREN
Rule 30    direct_declarator -> direct_declarator LPAREN parameter_list RPAREN
Rule 31    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 32    direct_declarator -> direct_declarator LPAREN id_list_opt RPAREN
Rule 33    initializer -> assignment_expression
Rule 34    initializer -> LBRACE initializer_list RBRACE
Rule 35    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 36    initializer_list -> initializer
Rule 37    initializer_list -> initializer_list COMMA initializer
Rule 38    assert_statement -> ASSERT expression SEMI
Rule 39    print_statement -> PRINT LPAREN expression_opt RPAREN SEMI
Rule 40    read_statement -> READ LPAREN argument_expression_list RPAREN SEMI
Rule 41    statement -> expression_statement
Rule 42    statement -> compound_statement
Rule 43    statement -> selection_statement
Rule 44    statement -> iteration_statement
Rule 45    statement -> jump_statement
Rule 46    statement -> assert_statement
Rule 47    statement -> print_statement
Rule 48    statement -> read_statement
Rule 49    postfix_expression -> primary_expression
Rule 50    postfix_expression -> postfix_expression PLUSPLUS
Rule 51    postfix_expression -> postfix_expression MINUSMINUS
Rule 52    postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 53    postfix_expression -> postfix_expression LPAREN argument_expression_opt RPAREN
Rule 54    cast_expression -> unary_expression
Rule 55    cast_expression -> LPAREN type_specifier RPAREN cast_expression
Rule 56    identifier -> ID
Rule 57    unary_operator -> ADDRESS
Rule 58    unary_operator -> TIMES
Rule 59    unary_operator -> PLUS
Rule 60    unary_operator -> MINUS
Rule 61    unary_operator -> NOT
Rule 62    unary_expression -> postfix_expression
Rule 63    unary_expression -> PLUSPLUS unary_expression
Rule 64    unary_expression -> MINUSMINUS unary_expression
Rule 65    unary_expression -> unary_operator cast_expression
Rule 66    constant_expression -> binary_expression
Rule 67    constant_expression_opt -> constant_expression
Rule 68    constant_expression_opt -> empty
Rule 69    binary_expression -> cast_expression
Rule 70    binary_expression -> binary_expression TIMES binary_expression
Rule 71    binary_expression -> binary_expression DIVIDE binary_expression
Rule 72    binary_expression -> binary_expression MOD binary_expression
Rule 73    binary_expression -> binary_expression PLUS binary_expression
Rule 74    binary_expression -> binary_expression MINUS binary_expression
Rule 75    binary_expression -> binary_expression LT binary_expression
Rule 76    binary_expression -> binary_expression LE binary_expression
Rule 77    binary_expression -> binary_expression HT binary_expression
Rule 78    binary_expression -> binary_expression HE binary_expression
Rule 79    binary_expression -> binary_expression EQ binary_expression
Rule 80    binary_expression -> binary_expression DIFF binary_expression
Rule 81    binary_expression -> binary_expression AND binary_expression
Rule 82    binary_expression -> binary_expression OR binary_expression
Rule 83    type_specifier -> VOID
Rule 84    type_specifier -> INT
Rule 85    type_specifier -> FLOAT
Rule 86    type_specifier -> CHAR
Rule 87    constant -> INT_CONST
Rule 88    constant -> FLOAT_CONST
Rule 89    constant -> CHAR_CONST
Rule 90    selection_statement -> IF LPAREN expression RPAREN statement
Rule 91    selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 92    iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 93    iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 94    iteration_statement -> FOR LPAREN declaration expression_opt SEMI expression_opt RPAREN statement
Rule 95    argument_expression_opt -> argument_expression_list
Rule 96    argument_expression_opt -> empty
Rule 97    argument_expression_list -> assignment_expression
Rule 98    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 99    primary_expression -> identifier
Rule 100   primary_expression -> constant
Rule 101   primary_expression -> string_literal
Rule 102   primary_expression -> LPAREN expression RPAREN
Rule 103   assignment_operator -> EQUALS
Rule 104   assignment_operator -> ASSIGN_TIMES
Rule 105   assignment_operator -> ASSIGN_DIVIDE
Rule 106   assignment_operator -> ASSIGN_MOD
Rule 107   assignment_operator -> ASSIGN_PLUS
Rule 108   assignment_operator -> ASSIGN_MINUS
Rule 109   assignment_expression -> binary_expression
Rule 110   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 111   jump_statement -> BREAK SEMI
Rule 112   jump_statement -> RETURN expression SEMI
Rule 113   jump_statement -> RETURN SEMI
Rule 114   parameter_list -> parameter_declaration
Rule 115   parameter_list -> parameter_list COMMA parameter_declaration
Rule 116   id_list_opt -> id_list
Rule 117   id_list_opt -> empty
Rule 118   id_list -> identifier
Rule 119   id_list -> id_list identifier
Rule 120   parameter_declaration -> type_specifier declarator
Rule 121   compound_statement -> LBRACE block_item_list_opt RBRACE
Rule 122   expression_statement -> expression_opt SEMI
Rule 123   expression_opt -> expression
Rule 124   expression_opt -> empty
Rule 125   expression -> assignment_expression
Rule 126   expression -> expression COMMA assignment_expression
Rule 127   string_literal -> STRING
Rule 128   pointer -> TIMES pointer
Rule 129   pointer -> TIMES
Rule 130   empty -> <empty>

Terminals, with rules where they appear

ADDRESS              : 57
AND                  : 81
ASSERT               : 38
ASSIGN_DIVIDE        : 105
ASSIGN_MINUS         : 108
ASSIGN_MOD           : 106
ASSIGN_PLUS          : 107
ASSIGN_TIMES         : 104
BREAK                : 111
CHAR                 : 86
CHAR_CONST           : 89
COMMA                : 21 35 37 98 115 126
DIFF                 : 80
DIVIDE               : 71
ELSE                 : 91
EQ                   : 79
EQUALS               : 17 103
FLOAT                : 85
FLOAT_CONST          : 88
FOR                  : 93 94
HE                   : 78
HT                   : 77
ID                   : 56
IF                   : 90 91
INT                  : 84
INT_CONST            : 87
LBRACE               : 34 35 121
LBRACKET             : 31 52
LE                   : 76
LPAREN               : 29 30 32 39 40 53 55 90 91 92 93 94 102
LT                   : 75
MINUS                : 60 74
MINUSMINUS           : 51 64
MOD                  : 72
NOT                  : 61
OR                   : 82
PLUS                 : 59 73
PLUSPLUS             : 50 63
PRINT                : 39
RBRACE               : 34 35 121
RBRACKET             : 31 52
READ                 : 40
RETURN               : 112 113
RPAREN               : 29 30 32 39 40 53 55 90 91 92 93 94 102
SEMI                 : 6 38 39 40 93 93 94 111 112 113 122
STRING               : 127
TIMES                : 58 70 128 129
VOID                 : 83
WHILE                : 92
error                : 

Nonterminals, with rules where they appear

argument_expression_list : 40 95 98
argument_expression_opt : 53
assert_statement     : 46
assignment_expression : 33 97 98 110 125 126
assignment_operator  : 110
binary_expression    : 66 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 109
block_item           : 22 23
block_item_list      : 13 23
block_item_list_opt  : 121
cast_expression      : 55 65 69
compound_statement   : 26 27 42
constant             : 100
constant_expression  : 67
constant_expression_opt : 31
decl_body            : 6
declaration          : 8 9 10 25 94
declaration_list     : 10 11
declaration_list_opt : 26 27
declarator           : 16 17 26 27 29 120
direct_declarator    : 4 5 30 31 32
empty                : 12 14 19 68 96 117 124
expression           : 38 52 90 91 92 102 112 123 126
expression_opt       : 39 93 93 93 94 94 122
expression_statement : 41
function_definition  : 7
global_declaration   : 2 3
global_declaration_list : 1 3
id_list              : 116 119
id_list_opt          : 32
identifier           : 28 99 118 119
init_declarator      : 20 21
init_declarator_list : 18 21
init_declarator_list_opt : 15
initializer          : 17 36 37
initializer_list     : 34 35 37
iteration_statement  : 44
jump_statement       : 45
parameter_declaration : 114 115
parameter_list       : 30 115
pointer              : 4 128
postfix_expression   : 50 51 52 53 62
primary_expression   : 49
print_statement      : 47
program              : 0
read_statement       : 48
selection_statement  : 43
statement            : 24 90 91 91 92 93 94
string_literal       : 101
type_specifier       : 15 26 55 120
unary_expression     : 54 63 64 110
unary_operator       : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . global_declaration_list
    (2) global_declaration_list -> . global_declaration
    (3) global_declaration_list -> . global_declaration_list global_declaration
    (7) global_declaration -> . function_definition
    (8) global_declaration -> . declaration
    (26) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (27) function_definition -> . declarator declaration_list_opt compound_statement
    (6) declaration -> . decl_body SEMI
    (83) type_specifier -> . VOID
    (84) type_specifier -> . INT
    (85) type_specifier -> . FLOAT
    (86) type_specifier -> . CHAR
    (4) declarator -> . pointer direct_declarator
    (5) declarator -> . direct_declarator
    (15) decl_body -> . type_specifier init_declarator_list_opt
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (56) identifier -> . ID

    VOID            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    TIMES           shift and go to state 15
    LPAREN          shift and go to state 17
    ID              shift and go to state 18

    program                        shift and go to state 1
    global_declaration_list        shift and go to state 2
    global_declaration             shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    decl_body                      shift and go to state 8
    pointer                        shift and go to state 13
    direct_declarator              shift and go to state 14
    identifier                     shift and go to state 16

state 1

    (0) S' -> program .



state 2

    (1) program -> global_declaration_list .
    (3) global_declaration_list -> global_declaration_list . global_declaration
    (7) global_declaration -> . function_definition
    (8) global_declaration -> . declaration
    (26) function_definition -> . type_specifier declarator declaration_list_opt compound_statement
    (27) function_definition -> . declarator declaration_list_opt compound_statement
    (6) declaration -> . decl_body SEMI
    (83) type_specifier -> . VOID
    (84) type_specifier -> . INT
    (85) type_specifier -> . FLOAT
    (86) type_specifier -> . CHAR
    (4) declarator -> . pointer direct_declarator
    (5) declarator -> . direct_declarator
    (15) decl_body -> . type_specifier init_declarator_list_opt
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (56) identifier -> . ID

    $end            reduce using rule 1 (program -> global_declaration_list .)
    VOID            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12
    TIMES           shift and go to state 15
    LPAREN          shift and go to state 17
    ID              shift and go to state 18

    global_declaration             shift and go to state 19
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    type_specifier                 shift and go to state 6
    declarator                     shift and go to state 7
    decl_body                      shift and go to state 8
    pointer                        shift and go to state 13
    direct_declarator              shift and go to state 14
    identifier                     shift and go to state 16

state 3

    (2) global_declaration_list -> global_declaration .

    VOID            reduce using rule 2 (global_declaration_list -> global_declaration .)
    INT             reduce using rule 2 (global_declaration_list -> global_declaration .)
    FLOAT           reduce using rule 2 (global_declaration_list -> global_declaration .)
    CHAR            reduce using rule 2 (global_declaration_list -> global_declaration .)
    TIMES           reduce using rule 2 (global_declaration_list -> global_declaration .)
    LPAREN          reduce using rule 2 (global_declaration_list -> global_declaration .)
    ID              reduce using rule 2 (global_declaration_list -> global_declaration .)
    $end            reduce using rule 2 (global_declaration_list -> global_declaration .)


state 4

    (7) global_declaration -> function_definition .

    VOID            reduce using rule 7 (global_declaration -> function_definition .)
    INT             reduce using rule 7 (global_declaration -> function_definition .)
    FLOAT           reduce using rule 7 (global_declaration -> function_definition .)
    CHAR            reduce using rule 7 (global_declaration -> function_definition .)
    TIMES           reduce using rule 7 (global_declaration -> function_definition .)
    LPAREN          reduce using rule 7 (global_declaration -> function_definition .)
    ID              reduce using rule 7 (global_declaration -> function_definition .)
    $end            reduce using rule 7 (global_declaration -> function_definition .)


state 5

    (8) global_declaration -> declaration .

    VOID            reduce using rule 8 (global_declaration -> declaration .)
    INT             reduce using rule 8 (global_declaration -> declaration .)
    FLOAT           reduce using rule 8 (global_declaration -> declaration .)
    CHAR            reduce using rule 8 (global_declaration -> declaration .)
    TIMES           reduce using rule 8 (global_declaration -> declaration .)
    LPAREN          reduce using rule 8 (global_declaration -> declaration .)
    ID              reduce using rule 8 (global_declaration -> declaration .)
    $end            reduce using rule 8 (global_declaration -> declaration .)


state 6

    (26) function_definition -> type_specifier . declarator declaration_list_opt compound_statement
    (15) decl_body -> type_specifier . init_declarator_list_opt
    (4) declarator -> . pointer direct_declarator
    (5) declarator -> . direct_declarator
    (18) init_declarator_list_opt -> . init_declarator_list
    (19) init_declarator_list_opt -> . empty
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (20) init_declarator_list -> . init_declarator
    (21) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (130) empty -> .
    (56) identifier -> . ID
    (16) init_declarator -> . declarator
    (17) init_declarator -> . declarator EQUALS initializer

    TIMES           shift and go to state 15
    LPAREN          shift and go to state 17
    SEMI            reduce using rule 130 (empty -> .)
    ID              shift and go to state 18

    declarator                     shift and go to state 20
    init_declarator_list_opt       shift and go to state 21
    pointer                        shift and go to state 13
    direct_declarator              shift and go to state 14
    init_declarator_list           shift and go to state 22
    empty                          shift and go to state 23
    identifier                     shift and go to state 16
    init_declarator                shift and go to state 24

state 7

    (27) function_definition -> declarator . declaration_list_opt compound_statement
    (11) declaration_list_opt -> . declaration_list
    (12) declaration_list_opt -> . empty
    (9) declaration_list -> . declaration
    (10) declaration_list -> . declaration_list declaration
    (130) empty -> .
    (6) declaration -> . decl_body SEMI
    (15) decl_body -> . type_specifier init_declarator_list_opt
    (83) type_specifier -> . VOID
    (84) type_specifier -> . INT
    (85) type_specifier -> . FLOAT
    (86) type_specifier -> . CHAR

    LBRACE          reduce using rule 130 (empty -> .)
    VOID            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12

    declaration_list_opt           shift and go to state 25
    declaration_list               shift and go to state 26
    empty                          shift and go to state 27
    declaration                    shift and go to state 28
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 29

state 8

    (6) declaration -> decl_body . SEMI

    SEMI            shift and go to state 30


state 9

    (83) type_specifier -> VOID .

    TIMES           reduce using rule 83 (type_specifier -> VOID .)
    LPAREN          reduce using rule 83 (type_specifier -> VOID .)
    ID              reduce using rule 83 (type_specifier -> VOID .)
    SEMI            reduce using rule 83 (type_specifier -> VOID .)
    RPAREN          reduce using rule 83 (type_specifier -> VOID .)


state 10

    (84) type_specifier -> INT .

    TIMES           reduce using rule 84 (type_specifier -> INT .)
    LPAREN          reduce using rule 84 (type_specifier -> INT .)
    ID              reduce using rule 84 (type_specifier -> INT .)
    SEMI            reduce using rule 84 (type_specifier -> INT .)
    RPAREN          reduce using rule 84 (type_specifier -> INT .)


state 11

    (85) type_specifier -> FLOAT .

    TIMES           reduce using rule 85 (type_specifier -> FLOAT .)
    LPAREN          reduce using rule 85 (type_specifier -> FLOAT .)
    ID              reduce using rule 85 (type_specifier -> FLOAT .)
    SEMI            reduce using rule 85 (type_specifier -> FLOAT .)
    RPAREN          reduce using rule 85 (type_specifier -> FLOAT .)


state 12

    (86) type_specifier -> CHAR .

    TIMES           reduce using rule 86 (type_specifier -> CHAR .)
    LPAREN          reduce using rule 86 (type_specifier -> CHAR .)
    ID              reduce using rule 86 (type_specifier -> CHAR .)
    SEMI            reduce using rule 86 (type_specifier -> CHAR .)
    RPAREN          reduce using rule 86 (type_specifier -> CHAR .)


state 13

    (4) declarator -> pointer . direct_declarator
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (56) identifier -> . ID

    LPAREN          shift and go to state 17
    ID              shift and go to state 18

    direct_declarator              shift and go to state 31
    identifier                     shift and go to state 16

state 14

    (5) declarator -> direct_declarator .
    (30) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (31) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> direct_declarator . LPAREN id_list_opt RPAREN

    VOID            reduce using rule 5 (declarator -> direct_declarator .)
    INT             reduce using rule 5 (declarator -> direct_declarator .)
    FLOAT           reduce using rule 5 (declarator -> direct_declarator .)
    CHAR            reduce using rule 5 (declarator -> direct_declarator .)
    LBRACE          reduce using rule 5 (declarator -> direct_declarator .)
    EQUALS          reduce using rule 5 (declarator -> direct_declarator .)
    COMMA           reduce using rule 5 (declarator -> direct_declarator .)
    SEMI            reduce using rule 5 (declarator -> direct_declarator .)
    RPAREN          reduce using rule 5 (declarator -> direct_declarator .)
    LPAREN          shift and go to state 32
    LBRACKET        shift and go to state 33


state 15

    (128) pointer -> TIMES . pointer
    (129) pointer -> TIMES .
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES

    LPAREN          reduce using rule 129 (pointer -> TIMES .)
    ID              reduce using rule 129 (pointer -> TIMES .)
    TIMES           shift and go to state 15

    pointer                        shift and go to state 34

state 16

    (28) direct_declarator -> identifier .

    LPAREN          reduce using rule 28 (direct_declarator -> identifier .)
    LBRACKET        reduce using rule 28 (direct_declarator -> identifier .)
    VOID            reduce using rule 28 (direct_declarator -> identifier .)
    INT             reduce using rule 28 (direct_declarator -> identifier .)
    FLOAT           reduce using rule 28 (direct_declarator -> identifier .)
    CHAR            reduce using rule 28 (direct_declarator -> identifier .)
    LBRACE          reduce using rule 28 (direct_declarator -> identifier .)
    EQUALS          reduce using rule 28 (direct_declarator -> identifier .)
    COMMA           reduce using rule 28 (direct_declarator -> identifier .)
    SEMI            reduce using rule 28 (direct_declarator -> identifier .)
    RPAREN          reduce using rule 28 (direct_declarator -> identifier .)


state 17

    (29) direct_declarator -> LPAREN . declarator RPAREN
    (4) declarator -> . pointer direct_declarator
    (5) declarator -> . direct_declarator
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (56) identifier -> . ID

    TIMES           shift and go to state 15
    LPAREN          shift and go to state 17
    ID              shift and go to state 18

    declarator                     shift and go to state 35
    pointer                        shift and go to state 13
    direct_declarator              shift and go to state 14
    identifier                     shift and go to state 16

state 18

    (56) identifier -> ID .

    LPAREN          reduce using rule 56 (identifier -> ID .)
    LBRACKET        reduce using rule 56 (identifier -> ID .)
    VOID            reduce using rule 56 (identifier -> ID .)
    INT             reduce using rule 56 (identifier -> ID .)
    FLOAT           reduce using rule 56 (identifier -> ID .)
    CHAR            reduce using rule 56 (identifier -> ID .)
    LBRACE          reduce using rule 56 (identifier -> ID .)
    EQUALS          reduce using rule 56 (identifier -> ID .)
    COMMA           reduce using rule 56 (identifier -> ID .)
    SEMI            reduce using rule 56 (identifier -> ID .)
    RPAREN          reduce using rule 56 (identifier -> ID .)
    ID              reduce using rule 56 (identifier -> ID .)
    PLUSPLUS        reduce using rule 56 (identifier -> ID .)
    MINUSMINUS      reduce using rule 56 (identifier -> ID .)
    TIMES           reduce using rule 56 (identifier -> ID .)
    DIVIDE          reduce using rule 56 (identifier -> ID .)
    MOD             reduce using rule 56 (identifier -> ID .)
    PLUS            reduce using rule 56 (identifier -> ID .)
    MINUS           reduce using rule 56 (identifier -> ID .)
    LT              reduce using rule 56 (identifier -> ID .)
    LE              reduce using rule 56 (identifier -> ID .)
    HT              reduce using rule 56 (identifier -> ID .)
    HE              reduce using rule 56 (identifier -> ID .)
    EQ              reduce using rule 56 (identifier -> ID .)
    DIFF            reduce using rule 56 (identifier -> ID .)
    AND             reduce using rule 56 (identifier -> ID .)
    OR              reduce using rule 56 (identifier -> ID .)
    RBRACKET        reduce using rule 56 (identifier -> ID .)
    ASSIGN_TIMES    reduce using rule 56 (identifier -> ID .)
    ASSIGN_DIVIDE   reduce using rule 56 (identifier -> ID .)
    ASSIGN_MOD      reduce using rule 56 (identifier -> ID .)
    ASSIGN_PLUS     reduce using rule 56 (identifier -> ID .)
    ASSIGN_MINUS    reduce using rule 56 (identifier -> ID .)
    RBRACE          reduce using rule 56 (identifier -> ID .)


state 19

    (3) global_declaration_list -> global_declaration_list global_declaration .

    VOID            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    INT             reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    FLOAT           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    CHAR            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    TIMES           reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    LPAREN          reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    ID              reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)
    $end            reduce using rule 3 (global_declaration_list -> global_declaration_list global_declaration .)


state 20

    (26) function_definition -> type_specifier declarator . declaration_list_opt compound_statement
    (16) init_declarator -> declarator .
    (17) init_declarator -> declarator . EQUALS initializer
    (11) declaration_list_opt -> . declaration_list
    (12) declaration_list_opt -> . empty
    (9) declaration_list -> . declaration
    (10) declaration_list -> . declaration_list declaration
    (130) empty -> .
    (6) declaration -> . decl_body SEMI
    (15) decl_body -> . type_specifier init_declarator_list_opt
    (83) type_specifier -> . VOID
    (84) type_specifier -> . INT
    (85) type_specifier -> . FLOAT
    (86) type_specifier -> . CHAR

    COMMA           reduce using rule 16 (init_declarator -> declarator .)
    SEMI            reduce using rule 16 (init_declarator -> declarator .)
    EQUALS          shift and go to state 37
    LBRACE          reduce using rule 130 (empty -> .)
    VOID            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12

    type_specifier                 shift and go to state 29
    declaration_list_opt           shift and go to state 36
    declaration_list               shift and go to state 26
    empty                          shift and go to state 27
    declaration                    shift and go to state 28
    decl_body                      shift and go to state 8

state 21

    (15) decl_body -> type_specifier init_declarator_list_opt .

    SEMI            reduce using rule 15 (decl_body -> type_specifier init_declarator_list_opt .)


state 22

    (18) init_declarator_list_opt -> init_declarator_list .
    (21) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMI            reduce using rule 18 (init_declarator_list_opt -> init_declarator_list .)
    COMMA           shift and go to state 38


state 23

    (19) init_declarator_list_opt -> empty .

    SEMI            reduce using rule 19 (init_declarator_list_opt -> empty .)


state 24

    (20) init_declarator_list -> init_declarator .

    COMMA           reduce using rule 20 (init_declarator_list -> init_declarator .)
    SEMI            reduce using rule 20 (init_declarator_list -> init_declarator .)


state 25

    (27) function_definition -> declarator declaration_list_opt . compound_statement
    (121) compound_statement -> . LBRACE block_item_list_opt RBRACE

    LBRACE          shift and go to state 40

    compound_statement             shift and go to state 39

state 26

    (11) declaration_list_opt -> declaration_list .
    (10) declaration_list -> declaration_list . declaration
    (6) declaration -> . decl_body SEMI
    (15) decl_body -> . type_specifier init_declarator_list_opt
    (83) type_specifier -> . VOID
    (84) type_specifier -> . INT
    (85) type_specifier -> . FLOAT
    (86) type_specifier -> . CHAR

    LBRACE          reduce using rule 11 (declaration_list_opt -> declaration_list .)
    VOID            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    CHAR            shift and go to state 12

    declaration                    shift and go to state 41
    decl_body                      shift and go to state 8
    type_specifier                 shift and go to state 29

state 27

    (12) declaration_list_opt -> empty .

    LBRACE          reduce using rule 12 (declaration_list_opt -> empty .)


state 28

    (9) declaration_list -> declaration .

    VOID            reduce using rule 9 (declaration_list -> declaration .)
    INT             reduce using rule 9 (declaration_list -> declaration .)
    FLOAT           reduce using rule 9 (declaration_list -> declaration .)
    CHAR            reduce using rule 9 (declaration_list -> declaration .)
    LBRACE          reduce using rule 9 (declaration_list -> declaration .)


state 29

    (15) decl_body -> type_specifier . init_declarator_list_opt
    (18) init_declarator_list_opt -> . init_declarator_list
    (19) init_declarator_list_opt -> . empty
    (20) init_declarator_list -> . init_declarator
    (21) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (130) empty -> .
    (16) init_declarator -> . declarator
    (17) init_declarator -> . declarator EQUALS initializer
    (4) declarator -> . pointer direct_declarator
    (5) declarator -> . direct_declarator
    (128) pointer -> . TIMES pointer
    (129) pointer -> . TIMES
    (28) direct_declarator -> . identifier
    (29) direct_declarator -> . LPAREN declarator RPAREN
    (30) direct_declarator -> . direct_declarator LPAREN parameter_list RPAREN
    (31) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> . direct_declarator LPAREN id_list_opt RPAREN
    (56) identifier -> . ID

    SEMI            reduce using rule 130 (empty -> .)
    TIMES           shift and go to state 15
    LPAREN          shift and go to state 17
    ID              shift and go to state 18

    init_declarator_list_opt       shift and go to state 21
    init_declarator_list           shift and go to state 22
    empty                          shift and go to state 23
    init_declarator                shift and go to state 24
    declarator                     shift and go to state 42
    pointer                        shift and go to state 13
    direct_declarator              shift and go to state 14
    identifier                     shift and go to state 16

state 30

    (6) declaration -> decl_body SEMI .

    VOID            reduce using rule 6 (declaration -> decl_body SEMI .)
    INT             reduce using rule 6 (declaration -> decl_body SEMI .)
    FLOAT           reduce using rule 6 (declaration -> decl_body SEMI .)
    CHAR            reduce using rule 6 (declaration -> decl_body SEMI .)
    TIMES           reduce using rule 6 (declaration -> decl_body SEMI .)
    LPAREN          reduce using rule 6 (declaration -> decl_body SEMI .)
    ID              reduce using rule 6 (declaration -> decl_body SEMI .)
    $end            reduce using rule 6 (declaration -> decl_body SEMI .)
    LBRACE          reduce using rule 6 (declaration -> decl_body SEMI .)
    IF              reduce using rule 6 (declaration -> decl_body SEMI .)
    WHILE           reduce using rule 6 (declaration -> decl_body SEMI .)
    FOR             reduce using rule 6 (declaration -> decl_body SEMI .)
    BREAK           reduce using rule 6 (declaration -> decl_body SEMI .)
    RETURN          reduce using rule 6 (declaration -> decl_body SEMI .)
    ASSERT          reduce using rule 6 (declaration -> decl_body SEMI .)
    PRINT           reduce using rule 6 (declaration -> decl_body SEMI .)
    READ            reduce using rule 6 (declaration -> decl_body SEMI .)
    PLUSPLUS        reduce using rule 6 (declaration -> decl_body SEMI .)
    MINUSMINUS      reduce using rule 6 (declaration -> decl_body SEMI .)
    ADDRESS         reduce using rule 6 (declaration -> decl_body SEMI .)
    PLUS            reduce using rule 6 (declaration -> decl_body SEMI .)
    MINUS           reduce using rule 6 (declaration -> decl_body SEMI .)
    NOT             reduce using rule 6 (declaration -> decl_body SEMI .)
    INT_CONST       reduce using rule 6 (declaration -> decl_body SEMI .)
    FLOAT_CONST     reduce using rule 6 (declaration -> decl_body SEMI .)
    CHAR_CONST      reduce using rule 6 (declaration -> decl_body SEMI .)
    STRING          reduce using rule 6 (declaration -> decl_body SEMI .)
    SEMI            reduce using rule 6 (declaration -> decl_body SEMI .)
    RBRACE          reduce using rule 6 (declaration -> decl_body SEMI .)


state 31

    (4) declarator -> pointer direct_declarator .
    (30) direct_declarator -> direct_declarator . LPAREN parameter_list RPAREN
    (31) direct_declarator -> direct_declarator . LBRACKET constant_expression_opt RBRACKET
    (32) direct_declarator -> direct_declarator . LPAREN id_list_opt RPAREN
